--- a/package/miraxr/src/views/login.hbs
+++ b/package/miraxr/src/views/login.hbs
@@ -21,6 +21,10 @@
     <button class="primary" id="back-btn-loginScreen" style="display: none;">
         {{{__ "login.login_form.back_btn"}}}
     </button>
+    <div class="register-container">
+       <p>Don't have an account yet?</p>
+       <a href="/cybercommand/assessment">Register for Free</a>
+    </div>
     <p class="err-container"></p>
 </section>
 <section class="link-container">
