--- a/package/miraxr/src/assets/custom.css
+++ b/package/miraxr/src/assets/custom.css
@@ -1,22 +1,34 @@
 html {
-  background: url("/assets/visuals/background.png");
-  background-size: cover;
+  /*background: url("/assets/visuals/background.png");*/
+  background-color: #000;
 }
 
-body {
-  background-color: #0f1729;
+body {  
   height: 100vh;
+  background-color: #0f0f0f;
+  /*background: url("/assets/visuals/background.jpg");*/
 }
 
 main {
-  background-color: #242839;
+  /*background-color: #242839;*/
+  background: rgba(20, 21, 20, 0.3);
   color: #eee;
-  margin-left: -145px;
+  /*margin-left: -145px;*/
   min-height: 250px;
-  height: auto;
-  width: 350px;
-  border: 2px solid rgba(255, 255, 255, .7);
-  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;  
+  width: 550px;
+  /*border: 2px solid rgba(255, 255, 255, .7);
+  border-radius: 5px;*/
+}
+
+.login-section {
+  border: 2px solid #313e51;
+  border-radius: 10px;
+  padding: 16px 60px 80px 60px;
+  width: 300px;
 }
 
 header {
@@ -91,8 +103,8 @@ button.primary {
   border-radius: 9999px;
   width: 100%;
   height: 46px;
-  background-color: rgba(91,187,228);
-  color: #000;
+  background-color: rgba(18,17,82,255);
+  color: #ffffff;
   border: 1px solid rgba(255, 255, 255, 0.2);
   font-size: 14px;
   font-family: ui-sans-serif, system-ui, sans-serif;
@@ -134,15 +146,15 @@ button.primary {
   margin-bottom: 10px;
 }
 .logo-container img {
-  display: none;
+  /*display: none;*/
 }
 .logo-container {
-  background: url("/assets/visuals/Logo.png");
+  /*background: url("/assets/visuals/Logo.png");
   background-size: contain;
   background-repeat: no-repeat;
   margin-top: 0px;
   margin-left: 30px;
-  height: 240px;  
+  height: 240px;  */
   max-width: 100%;  
 }
 button.secondary {
