--- a/package/miraxr/src/views/login.hbs
+++ b/package/miraxr/src/views/login.hbs
@@ -1,6 +1,7 @@
 <section class="logo-container">
-    <img src="{{{org.avatar}}}" alt="{{{org.name}}}" height="30" />
+    <img src="/assets/visuals/Logo.png" alt="{{{org.name}}}" height="250px" width="250px" />
 </section>
+<div class="login-section">
 <section class="input-container" id="login-partial">
     <section class="text-container">
         <p>
@@ -30,3 +31,4 @@
 <section class="link-container">
     <a href="javascript: void(0)" id="shared-session-login-link">{{{__ "login.login_form.shared_session_login_label"}}}</a>
 </section>
+</div>
