--- a/package/miraxr/src/views/login.hbs
+++ b/package/miraxr/src/views/login.hbs
@@ -14,6 +14,9 @@
     <input type="email" class="email-input" placeholder="{{{__ "login.login_form.email_placeholder"}}}" id="email" autocomplete="off" autofocus/>
 
 </section>
+<section class="link-container" style="margin-bottom: 15px;">
+    <a href="javascript: void(0)" id="shared-session-login-link">{{{__ "login.login_form.shared_session_login_label"}}}</a>
+</section>
 <section style="display:none;" id="provider-switcher-container" class="provider-switcher-container clearfix"></section>
 <section class="buttons-container">
     <button class="primary disabled" id="login-btn">
@@ -28,7 +31,5 @@
     </div>
     <p class="err-container"></p>
 </section>
-<section class="link-container">
-    <a href="javascript: void(0)" id="shared-session-login-link">{{{__ "login.login_form.shared_session_login_label"}}}</a>
-</section>
+
 </div>
